fix: scrollbar hover should change opacity and not width

--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -62,50 +62,45 @@
         appearance: textfield;
     }
 
-    @supports (scrollbar-width: thin) {
-        .scrollbar-thin {
-            scrollbar-width: thin;
+    @supports not selector(::-webkit-scrollbar) {
+        .scrollbar-minimal .dark {
+            scrollbar-color: color-mix(in srgb, var(--color-scrollbar-thumb) calc(var(--scrollbar-opacity, 1) * 100%), transparent)
+                color-mix(in srgb, var(--color-scrollbar-track) calc(var(--scrollbar-opacity, 1) * 100%), transparent);
         }
+        /* This is very weird on firefox */
     }
 
     @supports selector(::-webkit-scrollbar) {
         .scrollbar-minimal::-webkit-scrollbar {
             width: var(--default-scrollbar-width);
-        }
-
-        .scrollbar-minimal-x::-webkit-scrollbar {
             height: var(--default-scrollbar-width);
         }
 
-        .scrollbar-minimal::-webkit-scrollbar-track,
-        .scrollbar-minimal-x::-webkit-scrollbar-track {
-            background: var(--color-scrollbar-track);
+        .scrollbar-minimal::-webkit-scrollbar-track {
+            background: color-mix(in srgb, var(--color-scrollbar-track) calc(var(--scrollbar-opacity, 1) * 100%), transparent);
             border-radius: 9999px;
         }
 
-        .scrollbar-minimal::-webkit-scrollbar-thumb,
-        .scrollbar-minimal-x::-webkit-scrollbar-thumb {
-            background: var(--color-scrollbar-thumb);
+        .scrollbar-minimal::-webkit-scrollbar-thumb {
+            background: color-mix(in srgb, var(--color-scrollbar-thumb) calc(var(--scrollbar-opacity, 1) * 100%), transparent);
             border-radius: 9999px;
         }
 
-        .scrollbar-minimal::-webkit-scrollbar-thumb:hover,
-        .scrollbar-minimal-x::-webkit-scrollbar-thumb:hover {
+        .scrollbar-minimal::-webkit-scrollbar-thumb:hover {
             background: var(--color-scrollbar-thumb-hover);
         }
 
-        .scrollbar-minimal.scrollbar-hover::-webkit-scrollbar,
-        .scrollbar-minimal-x.scrollbar-hover::-webkit-scrollbar {
-            width: 0rem;
-            height: 0rem;
+        .scrollbar-minimal.scrollbar-hover::-webkit-scrollbar {
+            /* width: 0rem; */
+            /* height: 0rem; */
+            --scrollbar-opacity: 0;
         }
 
-        .group:hover .scrollbar-minimal.scrollbar-hover::-webkit-scrollbar {
-            width: var(--default-scrollbar-width);
-        }
-
-        .group:hover .scrollbar-minimal-x.scrollbar-hover::-webkit-scrollbar {
-            height: var(--default-scrollbar-width);
+        .group:hover .scrollbar-minimal.scrollbar-hover::-webkit-scrollbar,
+        .scrollbar-minimal.scrollbar-hover::-webkit-scrollbar:hover {
+            /* width: var(--default-scrollbar-width); */
+            /* height: var(--default-scrollbar-width); */
+            --scrollbar-opacity: 1;
         }
     }
 }
@@ -122,8 +117,8 @@
     /* For video popover which is always dark */
     .scrollbar-dark {
         --color-scrollbar-track: rgb(38 38 38 / var(--tw-bg-opacity, 1)) !important;
-        --color-scrollbar-thumb: #9e9e9e !important;
-        --color-scrollbar-thumb-hover: #d0d0d0 !important;
+        --color-scrollbar-thumb: rgba(158, 158, 158, var(--scrollbar-opacity, 1)) !important;
+        --color-scrollbar-thumb-hover: rgba(208, 208, 208, var(--scrollbar-opacity, 1)) !important;
     }
 
     .supports-scrollbars {
